quarkus/product/argocd/kustomize/service/base/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: ingress
spec:
  tls:
    - hosts:
      - service-ns.replaceme.com
      secretName: selfsigned-certs
  rules:
    - host: service-ns.replaceme.com
      http:
        paths:
          - path: /
            backend:
              serviceName: service
              servicePort: 8080
